# ia

./: .gitignore  pyproject.toml
lista1/: data.py  id3.py  id3_decision_tree.py  q2.py  q22.py  q3.py
lista2/1_chatbot/: README.md  config.yml  domain.yml
lista2/1_chatbot/actions/: actions.py
lista2/1_chatbot/data/: nlu.yml  rules.yml  stories.yml
lista_ab2/projeto2/deepseek/: candidate_model.pkl
lista_ab2/projeto2/deepseek/api/: ai_model.py  main.py  models.py  nlp_processor.py
lista_ab2/projeto2/deepseek/static/: script.js  style.css
lista_ab2/projeto2/deepseek/templates/: index.html
lista_ab2/projeto2/gpt/: decision_engine.py  extractor.py  main.py
lista_ab2/projeto2/gpt/static/: script.js  style.css
lista_ab2/projeto2/gpt/templates/: index.html
lista_ab2/projeto_1/chatgpt/: app.py
lista_ab2/projeto_1/chatgpt/chatbot/: dialog_manager.py  dialogue_manager.py
lista_ab2/projeto_1/chatgpt/explainability/: explainer.py
lista_ab2/projeto_1/chatgpt/static/: index.html
lista_ab2/projeto_1/claudeai/: medical_diagnosis_system.py
lista_ab2/projeto_1/claudeai/static/: index.html
