[project]
name = "ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "pip>=25.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pgmpy>=1.0.0",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.7",
    "uvicorn>=0.34.2",
]
